[fix] modal 띄웠을 때 row(Swiper css) 가 덮어버리는 현상 z-index: auto;로 해결

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -6,7 +6,7 @@
     border-top: 1px solid rgb(25, 25, 25);
     width: 100%;
     position: relative;
-    z-index: 100;
+    z-index: 0;
 
     @media (max-width: 768px) {
         padding: 20px 20px;
