--- a/src/components/MovieModal/MovieModal.css
+++ b/src/components/MovieModal/MovieModal.css
@@ -1,9 +1,10 @@
 .modal {
     position: relative;
     max-width: 800px;
+    /* height: 800px; */
     box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2),
       0px 5px 8px 0px rgba(0, 0, 0, 0.14), 0px 1px 14px 0px rgba(0, 0, 0, 0.12);
-    background: #111;
+    background-color: #111;
     overflow: hidden;
     border-radius: 8px;
     transition: all 400ms ease-in-out 2s;
