--- a/src/components/Row.css
+++ b/src/components/Row.css
@@ -16,7 +16,7 @@
     transition: 400ms all ease-in-out;
     cursor: pointer;
     width: 80px;
-    z-index: 1000;
+    /* z-index: 30; */
     position: absolute;
     left: 0;
     top: 0;
@@ -33,7 +33,7 @@
     transition: 400ms all ease-in-out;
     cursor: pointer;
     width: 80px;
-    z-index: 1000;
+    /* z-index: 30; */
     position: absolute;
     right: 0;
     top: 0;
@@ -133,7 +133,12 @@
       max-height: 280px;
     }
   }
-  
+
+  /* 모달 컴포넌트를 덮어버리는 현상 해결 auto!!@#!  */
+  .swiper {
+    z-index: auto !important;
+  }
+
   .swiper-pagination {
     text-align: right !important;
   }
